# mono_monster

./: .envrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  go.mod  go.sum  pyproject.toml
examples/: BUILD.bazel  hello_world.sh
gopkg/aws/client/: BUILD.bazel  client.go
requirements/: all.txt
tools/: BUILD.bazel
workstation_config/: BUILD.bazel  README.md  brew_install.sh  shell_automations.sh
